force-app/main/default/objects/smartlists__Smart_List_Filter__mdt/fields/smartlists__Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Custom_Permission__c</fullName>
    <inlineHelpText>API name of the custom permission required for viewing this filter. If blank, all users can view this filter</inlineHelpText>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>