force-app/main/default/objects/smartlists__Smart_List_Filter__mdt/fields/smartlists__Default_Filter__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Default_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Filter</label>
    <type>Checkbox</type>
</CustomField>