force-app/main/default/objects/smartlists__Smart_List_Filter__mdt/fields/smartlists__SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>smartlists__SOQL_Filter__c</fullName>
    <inlineHelpText>SOQL filter used for querying the records. Example: Status = &apos;Open&apos;.
Used for SOQL type only</inlineHelpText>
    <label>SOQL Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>