force-app/main/default/objects/smartlists__Smart_List_Filter__mdt/validationRules/smartlists__Check_SOQL_Filter.validationRule-meta.xml
<ValidationRule>
    <fullName>smartlists__Check_SOQL_Filter</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(smartlists__Smart_List_Definition__r.smartlists__Data_Source_Type__c, &apos;Apex Data Source&apos;) &amp;&amp; ISBLANK(smartlists__SOQL_Filter__c)</errorConditionFormula>
    <errorDisplayField>smartlists__SOQL_Filter__c</errorDisplayField>
    <errorMessage>SOQL Filter is required for SOQL and Files list</errorMessage>
</ValidationRule>